fix(data table): increase color contrast for links in selected rows

--- a/ui/components/data-tables/base/_index.scss
+++ b/ui/components/data-tables/base/_index.scss
@@ -70,6 +70,10 @@
     > th {
       background-color: $color-background-row-selected;
     }
+
+    a {
+      color: $color-text-link-primary-active;
+    }
   }
 
   /**
